2006-10-16  Laurent Sansonetti  <lsansonetti@apple.com>

	* src/lib/rbosa.rb,
	  src/rbosa.c,
	  src/rbosa.h:
	Added OSA accessors to control the Apple Event timeouts
	and the lazy send mechanism (by default activated).

2006-10-13  Laurent Sansonetti  <lsansonetti@apple.com>

	* README, TODO:
	Revisions for the first public release.

2006-10-11  Sebastian Delmont  <sd@notso.net>

	* src/lib/rbosa.rb:
	Fixed a bug in the code when handling optional 
	parameters. If a parameter is optional, defines
	all other parameters as optional.

2006-09-29  Laurent Sansonetti  <lsansonetti@apple.com>

	* src/lib/rbosa.rb, src/rbosa.c:
	Added support for list of types parameters.

2006-09-28  Laurent Sansonetti  <lsansonetti@apple.com>

	* src/lib/rbosa.rb:
	Print the debug messages only if $DEBUG is on.

	* AUTHORS:
	Added Sebastian and James.

2006-09-28  James MacAulay  <jmacaulay@gmail.com>

	* src/lib/rbosa.rb:
	Properly convert the 'comp' type to real 64-bit value.

2006-09-27  Sebastian Delmont  <sd@notso.net>

	* src/lib/rbosa.rb:
	Added support for the QuickDraw rectangle type.

2006-09-25  Laurent Sansonetti  <lsansonetti@apple.com>

	* src/lib/rbosa.rb:
	Do not implicitly resolve 'reference'-typed objects.

2006-09-17  Laurent Sansonetti  <lsansonetti@apple.com>

	* TODO:
	Closed the libxml task.

2006-09-14  Laurent Sansonetti  <lsansonetti@apple.com>

	* README:
	Mention that libxml-ruby is now required.

	* src/lib/rbosa.rb:
	- Requires libxml-ruby and uses it to parse the sdef file ;
	- Fixed a bug where certain setter property methods were not
	  generated.

	* src/rbosa.c:
	s/OSA::Application/OSA::EventDispatcher.

2006-08-25  Laurent Sansonetti  <lsansonetti@apple.com>

	* src/lib/rbosa.rb:
	Big change: try to minimize the send of apple events. We won't
	implicitly resolve object specifiers unless 1) a command is
	messaged 2) a primitive type (which is not defined in the sdef)
	is get 3) a property setter is messaged and 4) you explicitly